add missing require

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ AllCops:
   Exclude:
     - 'Gemfile'
     - 'Rakefile'
-    - 'beaker-i18n_helper.gemspec'
+    - 'beaker-task_helper.gemspec'
 
 Metrics/MethodLength:
   Max: 200
